[package]
authors = ['Minix Chain Developer']
edition = '2018'
name = 'pallet-coming-auction-rpc'
version = "1.4.0"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-coming-auction-rpc-runtime-api = { path = "runtime-api" }
