[package]
authors = ['The ChainX Authors']
name = "pallet-threshold-signature-rpc-runtime-api"
edition = "2018"
version = '3.0.0-monthly-2021-08'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2021-08'
version = '4.0.0-dev'

[dependencies.pallet-threshold-signature]
path = "../../../threshold-signature"
default-features = false

[features]
default = ["std"]
std = [
    # "codec/std",
    # Substrate primitives
    "sp-api/std",
    "sp-runtime/std",
    "sp-std/std",
    "pallet-threshold-signature/std",
]
